# 13f

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: filers_watchlist.yaml
data/: 13f_history.sqlite
docs/: 13F分析框架-需求与方法总纲.md  开发原理-证券标识与行业映射.md
tests/: test_cik.py  test_filer_delete.py  test_filing_price_sync.py  test_holdings_table.py  test_name_verify.py  test_prices_coverage.py  test_prices_errors.py  test_value_scale.py  test_value_usd_consistency.py
thirteenf/: __init__.py  cik.py  cli.py  config.py  cusip_ref.py  db.py  envload.py  filer_delete.py  gics.py  gics_hierarchy.py  report_period.py  sector_sync.py  value_scale.py
thirteenf/gui/: STRUCTURE.md  __init__.py  analytics.py  browse.py  columns.py  connection.py  filing_price_sync.py  formatters.py  institution_delete.py  institutions.py  periods.py  styles.py  tab_ingest.py  tab_raw_data.py  tab_registry.py  ticker.py  top10_new_table.py  widgets.py
thirteenf/gui/tab_holdings/: __init__.py  page.py  reports.py
thirteenf/prices/: __init__.py  bars.py  coverage.py  debug_cli.py  errors.py  fetch.py  filing_sync.py  ranges.py  store.py  sync.py  yfinance_provider.py
thirteenf/scrape/: edgar.py  name_verify.py  progress.py  runner.py
